# meilisearch-fastapi

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  justfile  pyproject.toml  tox.ini
.github/: release-draft-template.yaml
.github/workflows/: ci.yaml  pypi_publish.yaml  testing.yaml
meilisearch_fastapi/: _client.py  _config.py
meilisearch_fastapi/models/: __init__.py  document_info.py  index.py  meili_message.py  search_parameters.py  settings.py  tenant_token.py
meilisearch_fastapi/routes/: document_routes.py  index_routes.py  meilisearch_routes.py  search_routes.py  settings_routes.py
tests/: conftest.py  test_config.py  test_document_routes.py  test_index_routes.py  test_meilisearch_routes.py  test_search_routes.py  test_settings_routes.py
