[tool.poetry]
name = "meilisearch-fastapi"
version = "0.18.2"
description = "Meilisearch integration with FastAPI"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/meilisearch-fastapi"
homepage = "https://github.com/sanders41/meilisearch-fastapi"
documentation = "https://github.com/sanders41/meilisearch-fastapi"
keywords = ["meilisearch", "fastapi", "async", "search"]
classifiers=[
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
include = ["meilisearch_fastapi/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.95.1"
pydantic = {version = ">=1.8.2", extras = ["dotenv"]}
meilisearch-python-async = ">=1.3.0"
camel-converter = ">=3.0.2"

[tool.poetry.group.dev.dependencies]
black = ">=22.8.0"
mypy = ">=1.2.0"
pre-commit = ">=2.20.0"
pytest = ">=7.1.3"
pytest-cov = ">=3.0.0"
uvicorn = ">=0.18.3"
pytest-asyncio = ">=0.19.0"
httpx = ">=0.23.0"
ruff = ">=0.0.120"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch_fastapi --cov-report term-missing"
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
select=["E", "F", "UP", "I001", "T201", "T203"]
ignore=["E501"]
line-length = 100
target-version = "py38"
fix = true
