[tool.poetry]
name = "meilisearch-fastapi"
version = "0.19.0"
description = "Meilisearch integration with FastAPI"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/meilisearch-fastapi"
homepage = "https://github.com/sanders41/meilisearch-fastapi"
documentation = "https://github.com/sanders41/meilisearch-fastapi"
keywords = ["meilisearch", "fastapi", "async", "search"]
classifiers=[
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
include = ["meilisearch_fastapi/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.95.1"
pydantic = {version = ">=2.0.0", extras = ["dotenv"]}
pydantic-settings = ">=2.0.3"
meilisearch-python-sdk = ">=2.1.0"
camel-converter = ">=3.0.2"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.2.0"
pre-commit = ">=2.20.0"
pytest = ">=7.1.3"
pytest-cov = ">=3.0.0"
uvicorn = ">=0.18.3"
pytest-asyncio = ">=0.19.0"
pytest-meilisearch = ">=0.3.0"
httpx = ">=0.23.0"
ruff = ">=0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch_fastapi --cov-report term-missing --meilisearch-master-key masterKey"
asyncio_mode = "auto"
meilisearch_clear_indexes = "async"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
select=["E", "F", "UP", "I001", "T201", "T203"]
ignore=[
  # Recommened ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
line-length = 100
target-version = "py38"
fix = true
