[tool.poetry]
name = "meilisearch-fastapi"
version = "0.20.0"
description = "Meilisearch integration with FastAPI"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/meilisearch-fastapi"
homepage = "https://github.com/sanders41/meilisearch-fastapi"
documentation = "https://github.com/sanders41/meilisearch-fastapi"
keywords = ["meilisearch", "fastapi", "async", "search"]
classifiers=[
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
include = ["meilisearch_fastapi/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
eval-type-backport = {version = ">=0.2.0", python = "<3.10"}  # allows pydantic to use pipe instead of Union
fastapi = ">=0.95.1"
pydantic = {version = ">=2.0.0", extras = ["dotenv"]}
pydantic-settings = ">=2.0.3"
meilisearch-python-sdk = ">=3.0.0"
camel-converter = ">=3.0.2"

[tool.poetry.group.dev.dependencies]
httpx = "0.28.1"
mypy = "1.15.0"
pre-commit = "4.1.0"
pytest = "8.3.5"
pytest-asyncio = "0.25.3"
pytest-cov = "6.0.0"
pytest-meilisearch = "0.6.1"
ruff = "0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch_fastapi --cov-report term-missing --meilisearch-master-key masterKey"
asyncio_mode = "auto"
meilisearch_clear = "async_index"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py39"
fix = true

[tool.ruff.lint]
select=[
  "E",  # pycodestyle
  "B",  #
  "F",  # pyflakes
  "UP",  # pyupgrade
  "I001",  # unsorted-imports
  "T201",
  "T203",
  "ASYNC",  # flake8-async
]
ignore=[
  "B008",  # do not perform function calls in argument defaults
  # Recommened ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
